<resources>
    <string name="app_name">SPCF</string>
    <string name="background_desc">Background</string>

    <string name="lblFirstName">First Name</string>
    <string name="lblLastName">Last Name</string>
    <string name="lblUsername">Username</string>
    <string name="lblPassword">Password</string>
    <string name="btnSignup">Sign Up</string>
    <string name="btnCreateanAccount">Create an account</string>
    <string name="btnLogin">Login</string>
</resources>
