<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LoginActivty">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/background_desc"
                android:background="@drawable/background_spcf_a"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
            <ImageView
                android:contentDescription="@string/background_desc"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>

        <!--- layoutLoginContent -->
        <LinearLayout
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:text="@string/lblUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:hint="@string/lblUsername"
                android:id="@+id/tvUsername"
                android:drawablePadding="20dp"
                android:drawableEnd="@drawable/ic_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="" />
            <TextView
                android:text="@string/lblPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/tvPassword"
                android:hint="@string/lblPassword"
                android:drawablePadding="20dp"
                android:drawableEnd="@drawable/ic_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
            <Button
                android:id="@+id/btnSignUp"
                android:background="@drawable/rec_gradient"
                android:textColor="#FFF"
                android:layout_marginTop="15dp"
                android:textAllCaps="false"
                android:text="@string/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="40dp">

            <Button
                android:background="@drawable/rec_gradient_signup"
                android:textColor="#FFF"
                android:layout_marginTop="15dp"
                android:textAllCaps="false"
                android:text="@string/btnCreateanAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnCreateanAccount" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>